# veneer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/ISSUE_TEMPLATE/: implementation-task.md
crates/veneer/: Cargo.toml
crates/veneer-adapters/: Cargo.toml
crates/veneer-adapters/src/: artifact.rs  config_interface.rs  conventions.rs  coverage.rs  generator.rs  inline.rs  intelligence.rs  lib.rs  matrix.rs  mdx.rs  mode.rs  rafters_source.rs  react.rs  registry.rs  scope.rs  substrate.rs  tokens.rs  traits.rs  ts_helpers.rs  veneer_config.rs
crates/veneer-adapters/tests/: no_toolchain_spawn.rs  shadow_isolation.rs
crates/veneer-adapters/tests/fixtures/: README.md
crates/veneer-adapters/tests/fixtures/artifact/project/.rafters/: config.rafters.json
crates/veneer-adapters/tests/fixtures/artifact/project/.rafters/tokens/: semantic.rafters.json
crates/veneer-adapters/tests/fixtures/artifact/project/components/: button.tsx
crates/veneer-adapters/tests/fixtures/artifact/project/composites/: hero-banner.composite.json
crates/veneer-adapters/tests/fixtures/coverage/partial/.rafters/: config.rafters.json
crates/veneer-adapters/tests/fixtures/coverage/partial/.rafters/output/: rafters.css
crates/veneer-adapters/tests/fixtures/coverage/partial/.rafters/tokens/: semantic.rafters.json
crates/veneer-adapters/tests/fixtures/coverage/partial/components/: broken.tsx  button.tsx
crates/veneer-adapters/tests/fixtures/coverage/partial/composites/: hero-banner.composite.json
crates/veneer-adapters/tests/fixtures/discovery/casing_collision/.rafters/: config.rafters.json
crates/veneer-adapters/tests/fixtures/discovery/casing_collision/composites/: hero-banner.tsx
crates/veneer-adapters/tests/fixtures/discovery/no_source/components/: button.tsx
crates/veneer-adapters/tests/fixtures/discovery/with_namespace/.rafters/: config.rafters.json
crates/veneer-adapters/tests/fixtures/discovery/with_namespace/components/: button.classes.ts  button.tsx  card-composite.tsx
crates/veneer-adapters/tests/fixtures/discovery/with_namespace/composites/: hero-banner.composite.json  split-panel.tsx
crates/veneer-adapters/tests/fixtures/rafters_source/bad_value/.rafters/tokens/: color.rafters.json
crates/veneer-adapters/tests/fixtures/rafters_source/dtcg_only/: tokens.dtcg.json
crates/veneer-adapters/tests/fixtures/rafters_source/malformed/.rafters/tokens/: color.rafters.json
crates/veneer-adapters/tests/fixtures/rafters_source/partial/.rafters/tokens/: spacing.rafters.json
crates/veneer-adapters/tests/fixtures/rafters_source/with_namespace/: tokens.dtcg.json
crates/veneer-adapters/tests/fixtures/rafters_source/with_namespace/.rafters/tokens/: color.rafters.json  motion.rafters.json  semantic.rafters.json
crates/veneer-adapters/tests/fixtures/render/project/.rafters/: config.rafters.json
crates/veneer-adapters/tests/fixtures/render/project/.rafters/output/: rafters.css
crates/veneer-adapters/tests/fixtures/render/project/.rafters/tokens/: semantic.rafters.json
crates/veneer-adapters/tests/fixtures/render/project/components/: button.tsx  misrule.classes.ts  plain.classes.ts  quality-indicator.classes.ts
crates/veneer-adapters/tests/fixtures/shadow/: badge.classes.ts  quality-indicator.classes.ts  rafters.css
crates/veneer-docs/: Cargo.toml
crates/veneer-docs/src/: cli_parser.rs  lib.rs  mdx_reference.rs  sidebar.rs  skeleton.rs
crates/veneer-registry/: Cargo.toml
crates/veneer-registry/src/: error.rs  lib.rs  local.rs  model.rs  reader.rs
crates/veneer-server/src/: server.rs
crates/veneer-service-design/: Cargo.toml
crates/veneer-service-design/src/: error.rs  lib.rs  model.rs
crates/veneer-service-design/src/parser/: blueprint.rs  ecosystem.rs  journey.rs  mod.rs  pain_matrix.rs  persona.rs  table.rs
crates/veneer-service-design/src/parser/test_fixtures/: sample_blueprint.md  sample_ecosystem.md  sample_journey.md  sample_pain_matrix.md  sample_persona.md
crates/veneer-service-design/src/validation/: cross_ref.rs  internal.rs  mod.rs
crates/veneer-static/assets/: main.css  main.js
crates/veneer-static/src/: assets.rs  builder.rs  templates.rs
crates/veneer/src/: main.rs
crates/veneer/src/commands/: build.rs  dev.rs  extract.rs  init.rs  mod.rs  watch.rs
crates/veneer/tests/: input_contract.rs  no_network_listener.rs
docs/: ARCHITECTURE.md  DEVELOPER.md
