[workspace]
resolver = "2"
members = [
    "crates/veneer",
    "crates/veneer-mdx",
    "crates/veneer-adapters",
    "crates/veneer-registry",
    "crates/veneer-server",
    "crates/veneer-static",
    "crates/veneer-service-design",
    "crates/veneer-docs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rafters-studio/veneer"
authors = ["Sean Silvius"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# File watching
notify = "8"

# Parsing
oxc_parser = "0.72"
oxc_allocator = "0.72"
oxc_ast = "0.72"
oxc_span = "0.72"
pulldown-cmark = "0.12"

# Templates and CSS
minijinja = { version = "2", features = ["loader"] }
lightningcss = "1.0.0-alpha.70"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Utilities
regex = "1"
walkdir = "2"
rayon = "1"
open = "5"

# Crate dependencies
veneer-mdx = { path = "crates/veneer-mdx" }
veneer-adapters = { path = "crates/veneer-adapters" }
veneer-registry = { path = "crates/veneer-registry" }
veneer-server = { path = "crates/veneer-server" }
veneer-static = { path = "crates/veneer-static" }
veneer-service-design = { path = "crates/veneer-service-design" }
veneer-docs = { path = "crates/veneer-docs" }

[profile.release]
strip = true
lto = true
codegen-units = 1
