[workspace]
resolver = "2"
members = [
    "crates/veneer",
    "crates/veneer-adapters",
    "crates/veneer-docs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rafters-studio/veneer"
authors = ["Sean Silvius"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parsing
oxc_parser = "0.72"
oxc_allocator = "0.72"
oxc_ast = "0.72"
oxc_span = "0.72"

# Utilities
regex = "1"
walkdir = "2"

# Crate dependencies
veneer-adapters = { path = "crates/veneer-adapters" }
veneer-docs = { path = "crates/veneer-docs" }

[profile.release]
strip = true
lto = true
codegen-units = 1
