[package]
name = "veneer-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Framework adapters for transforming JSX to Web Components"

[dependencies]
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
