[package]
name = "veneer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-powered component documentation generator CLI"

[[bin]]
name = "veneer"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

veneer-mdx = { workspace = true }
veneer-adapters = { workspace = true }
veneer-server = { workspace = true }
veneer-static = { workspace = true }
open = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
notify = { workspace = true }
nix = { workspace = true }
