[package]
name = "veneer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-powered component documentation generator CLI"

[[bin]]
name = "veneer"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }

veneer-adapters = { workspace = true }

[dev-dependencies]
tempfile = "3"
